# stored

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README.md  TODO  configure  configure.ac
autoconf/: config.h  config.h.in  config.status  configure.ac
autoconf/autom4te.cache/: output.1  requests  traces.0  traces.1
cmake/Modules/: FindSystemd.cmake
config/: config.h.in  custom_config.h
doc/: Makefile.am  Makefile.in  TODO  index.html
doc/tryouts/: notifier.c  signaling.c
etc/: stored.cfg
examples/: Makefile.am  Makefile.in  create_filled_fs.sh  cunit_example.c  hello.c
man/: Makefile.am  Makefile.in  storectl.1  stored.8
scripts/: Makefile.am  Makefile.in  some_hook.sh
src/: Makefile.am  Makefile.in  custom_config.h  main.c  mtab_check.c  mtab_check.h  mtab_check_loop.c  mtab_check_loop.h  mtab_check_loop_test.c  mtab_check_trigger.c  mtab_check_trigger.h  mtab_checker.c  mtab_checker.h  mtab_checker_test.c  storectl.c  stored.c  stored_config.h.in
src/srv/: real_srv.c  srv.c  srv.h
src/util/: common.c  common.h  config.c  configure.c  configure.h  configure_test.c  demonizer.c  demonizer.h  json.c  json.h  json_test.c  logger.c  logger.h  logger_test.c  sds.c  sds.h  sdsalloc.c  srv.c  srv.h  srv_test.c  testing_main.c
systemd/: Makefile.am  Makefile.in  stored.service
test/: Makefile.am  Makefile.in  create_filled_fs.sh  flawfind.sh  mtab_check_loop_test.c  splint.sh
test/manual/: memory_leaks.sh  stress_test.sh
test/misc/: clib_mock.h  configure_test.c  demonizer_test.c  json_test.c  logger_test.c  mtab_check_loop_test.c  mtab_checker_test.c  srv_test.c
test/scripts/: concurrency_bugs.sh  dummy.sh  flawfind.sh  memory_leaks.sh
test/src/: mtab_checker.c  mtab_checker.h
test/src/util/: common.h  configure.c  configure.h  configure_test.c  logger.c  logger.h  logger_test.c  map_lib.c  map_lib.h  sds.c  sds.h  sdsalloc.c  sdsalloc.h  srv.c  srv.h  srv_test.c
test/static/: flawfind.sh
test/util/: clib_mock.h  demonizer_test.c  logger_test.c
tryouts/: daemon.c  demonizing.odt  fanotify_file.c  index.json  inotify_file.c  libc_fstab.c  libc_mtab.c  loop_select.c  netlink_events.c  poll_etc.c  processes.c  processes_fork.c  select.c  signal_handle.c  tiny.c
